objects/zkups__UPSUserPrinter__c.object
<CustomObject>
    <fields>
        <fullName>zkups__DocPrinterTray__c</fullName>
        <label>Doc Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__NonThermalPrinterTray__c</fullName>
        <label>Non Thermal Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PrinterType__c</fullName>
        <label>Printer Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__Printer__c</fullName>
        <label>Printer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ScaleWeightUnit__c</fullName>
        <label>Scale Weight Unit</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ScalesComputerId__c</fullName>
        <label>Scale Computer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ScalesDeviceId__c</fullName>
        <label>Scale Device Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ScalesName__c</fullName>
        <label>Scale Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ThermalPrinterTray__c</fullName>
        <label>Thermal Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UPS_User_Printers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>UPS User Printer</label>
    <listViews>
        <fullName>Nolan_Daigle_UPSUserPrinter</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>UP-{0000}</displayFormat>
        <label>UPS User Printer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPS User Printers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>